# blaze

./: .gitmodules  CMakeLists.txt  LICENSE  README.org  lib  mal  tests
cmake/: copy-lisp.cmake
example/: CMakeLists.txt
example/src/: main.cpp
lisp/: compare.bl  init.bl  load.bl  other.bl  predicate.bl
src/: ast.cpp  ast.h  environment.cpp  environment.h  error.h  eval-special-form.cpp  eval.cpp  eval.h  forward.h  functions.cpp  lexer.cpp  lexer.h  macro.h  main.cpp  printer.cpp  printer.h  reader.cpp  reader.h  readline.cpp  readline.h  repl.cpp  repl.h  settings.cpp  settings.h  step0_repl.cpp  step1_read_print.cpp  step2_eval.cpp  step3_env.cpp  step4_if_fn_do.cpp  step5_tco.cpp  step6_file.cpp  step7_quote.cpp  step8_macros.cpp  step9_try.cpp  stepA_mal.cpp  types.h  util.h
src/blaze/: ast.cpp  ast.h  error.h  eval-special-form.cpp  eval.cpp  eval.h  forward.h  lexer.cpp  lexer.h  macro.h  printer.cpp  printer.h  reader.cpp  reader.h  readline.cpp  readline.h  repl.cpp  repl.h  settings.cpp  to-from-hashmap.h  util.h
src/blaze/env/: environment.cpp  environment.h  macro.h
src/blaze/env/functions/: collection-access.cpp  collection-constructor.cpp  collection-modify.cpp  compare.cpp  convert.cpp  format.cpp  math.cpp  meta.cpp  mutable.cpp  operators.cpp  other.cpp  predicate.cpp  repl.cpp
src/env/: environment.cpp  environment.h  macro.h
src/env/functions/: collection-access.cpp  collection-constructor.cpp  collection-modify.cpp  compare.cpp  convert.cpp  format.cpp  meta.cpp  mutable.cpp  operators.cpp  other.cpp  predicate.cpp  repl.cpp
